// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Txt Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-fLlhyt gAlhfr sc-bBrHrO cKEGnj"
    >
      Standard
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Txt In Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-fLlhyt gAlhfr sc-bBrHrO kyKjKp"
    >
      Colored text
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Txt Span Component 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <span
      class="sc-fLlhyt fsEJDz sc-ivTmOn ghimrz"
    >
      Space   is   preserved
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/Txt Styled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-fLlhyt fMOSYV sc-bBrHrO cKEGnj"
    >
      Styled text
    </div>
  </div>
</div>
`;
